; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_socket-util.c_socknameinfo_pretty.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_socket-util.c_socknameinfo_pretty.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%union.sockaddr_union = type { i32 }

@NI_MAXHOST = common dso_local global i32 0, align 4
@IDN_FLAGS = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [27 x i8] c"getnameinfo(%s) failed: %m\00", align 1
@ENOMEM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @socknameinfo_pretty(%union.sockaddr_union* %0, i32 %1, i8** %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %union.sockaddr_union*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8**, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store %union.sockaddr_union* %0, %union.sockaddr_union** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8** %2, i8*** %7, align 8
  %14 = load i32, i32* @NI_MAXHOST, align 4
  %15 = zext i32 %14 to i64
  %16 = call i8* @llvm.stacksave()
  store i8* %16, i8** %9, align 8
  %17 = alloca i8, i64 %15, align 16
  store i64 %15, i64* %10, align 8
  %18 = load i8**, i8*** %7, align 8
  %19 = call i32 @assert(i8** %18)
  %20 = load %union.sockaddr_union*, %union.sockaddr_union** %5, align 8
  %21 = bitcast %union.sockaddr_union* %20 to i32*
  %22 = load i32, i32* %6, align 4
  %23 = trunc i64 %15 to i32
  %24 = load i32, i32* @IDN_FLAGS, align 4
  %25 = call i32 @getnameinfo(i32* %21, i32 %22, i8* %17, i32 %23, i32* null, i32 0, i32 %24)
  store i32 %25, i32* %8, align 4
  %26 = load i32, i32* %8, align 4
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %28, label %42

28:                                               ; preds = %3
  %29 = load i32, i32* @errno, align 4
  store i32 %29, i32* %12, align 4
  %30 = load %union.sockaddr_union*, %union.sockaddr_union** %5, align 8
  %31 = bitcast %union.sockaddr_union* %30 to i32*
  %32 = load i32, i32* %6, align 4
  %33 = call i32 @sockaddr_pretty(i32* %31, i32 %32, i32 1, i32 1, i8** %11)
  store i32 %33, i32* %8, align 4
  %34 = load i32, i32* %8, align 4
  %35 = icmp slt i32 %34, 0
  br i1 %35, label %36, label %38

36:                                               ; preds = %28
  %37 = load i32, i32* %8, align 4
  store i32 %37, i32* %4, align 4
  store i32 1, i32* %13, align 4
  br label %53

38:                                               ; preds = %28
  %39 = load i32, i32* %12, align 4
  %40 = load i8*, i8** %11, align 8
  %41 = call i32 @log_debug_errno(i32 %39, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0), i8* %40)
  br label %50

42:                                               ; preds = %3
  %43 = call i8* @strdup(i8* %17)
  store i8* %43, i8** %11, align 8
  %44 = load i8*, i8** %11, align 8
  %45 = icmp ne i8* %44, null
  br i1 %45, label %49, label %46

46:                                               ; preds = %42
  %47 = load i32, i32* @ENOMEM, align 4
  %48 = sub nsw i32 0, %47
  store i32 %48, i32* %4, align 4
  store i32 1, i32* %13, align 4
  br label %53

49:                                               ; preds = %42
  br label %50

50:                                               ; preds = %49, %38
  %51 = load i8*, i8** %11, align 8
  %52 = load i8**, i8*** %7, align 8
  store i8* %51, i8** %52, align 8
  store i32 0, i32* %4, align 4
  store i32 1, i32* %13, align 4
  br label %53

53:                                               ; preds = %50, %46, %36
  %54 = load i8*, i8** %9, align 8
  call void @llvm.stackrestore(i8* %54)
  %55 = load i32, i32* %4, align 4
  ret i32 %55
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @assert(i8**) #2

declare dso_local i32 @getnameinfo(i32*, i32, i8*, i32, i32*, i32, i32) #2

declare dso_local i32 @sockaddr_pretty(i32*, i32, i32, i32, i8**) #2

declare dso_local i32 @log_debug_errno(i32, i8*, i8*) #2

declare dso_local i8* @strdup(i8*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
